# thermoconsole

./: .gitignore  README.md  install.sh  launch.py  setup-dev.sh  thermo.py
cmake/: lua.cmake
docs/: API.md  DEVELOPMENT.md  PI_ZERO_SETUP.md  ROM_FORMAT.md  USB_GAME_LOADING.md
editor/: CMakeLists.txt  README.md  ThermoEditor.cpp  ThermoEditor.h  imgui.ini  main.cpp  setup.sh
editor/panels/: CodeEditor.cpp  CodeEditor.h  Console.cpp  Console.h  FileBrowser.cpp  FileBrowser.h  GamePreview.cpp  GamePreview.h  ManifestEditor.cpp  ManifestEditor.h  SoundEditor.cpp  SoundEditor.h  SpriteEditor.cpp  SpriteEditor.h
games/: space_dodge.tcr
games/demo_platformer/: README.md  main.lua  manifest.json
games/hello/: main.lua  manifest.json
games/space_dodge/: main.lua  manifest.json  sounds.json
image-builder/: README.md  build-image.sh  build-pigen.sh
pico-controller/: CMakeLists.txt  README.md  controller.c  main.py  main_usb.py
runtime/: CMakeLists.txt  Makefile  README.md
runtime/include/: chiptune.h  platform.h  sound.h  thermo.h
runtime/src/: audio.c  audio_pico.c  chiptune.c  graphics.c  input.c  lua_api.c  main.c  pico_usb.c  rom.c  script.c  sound.c  system_api.c
runtime/src/platform/: platform_pc.c  platform_pi.c
scripts/: usb-gadget.sh  usb-mode-display.py  usb-mode-monitor.sh
scripts/systemd/: thermoconsole-usb-monitor.service  thermoconsole-usb.service
sdk/: new_game.py  pack_rom.py  unpack_rom.py
system/: sounds.lua
system/boot/: main.lua  manifest.json
system/menu/: main.lua  manifest.json
system/pause/: main.lua
